--- a/app/templates/layouts/sidebar.html
+++ b/app/templates/layouts/sidebar.html
@@ -51,6 +51,12 @@
           <span>My Reports</span>
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link {% if filename != 'myreports' %} collapsed {% endif %}" href="/performance">
+          <i class="bi bi-book"></i>
+          <span>Performance</span>
+        </a>
+      </li>
       <!-- end of my reports -->
 
       
