--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -28,7 +28,7 @@
   />
   <link rel="stylesheet" href="../../static/assets/css/styles.css" />
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+  <link href="{% static 'assets/img/icooon.png' %}" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
