--- a/app/templates/layouts/header.html
+++ b/app/templates/layouts/header.html
@@ -4,8 +4,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="/dashboard" class="logo d-flex align-items-center">
-        <img src="{% static 'assets/img/logo.png' %}" alt="">
-        <span class="d-none d-lg-block">Lhws AHS</span>
+        <img src="https://img.icons8.com/external-filled-outline-wichaiwi/100/undefined/external-health-new-normal-after-covid-19-filled-outline-wichaiwi-2.png"/><span class="d-none d-lg-block">Lhws AHS</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
