--- a/app/templates/layouts/sidebar.html
+++ b/app/templates/layouts/sidebar.html
@@ -11,7 +11,7 @@
       </li><!-- End Dashboard Nav -->
       <li class="nav-item">
         <a class="nav-link {% if filename != 'index' %} collapsed {% endif %}" href="/tabular">
-          <i class="bi bi-grid"></i>
+          <i class="bi bi-file-spreadsheet-fill"></i>
           <span>Tabular View</span>
         </a>
       </li>
@@ -29,7 +29,7 @@
 
       <li class="nav-item">
         <a class="nav-link {% if filename != 'healthworker' %} collapsed {% endif %}" href="/details">
-          <i class="bi bi-person"></i>
+          <i class="bi bi-ticket-detailed"></i>
           <span>Details of Health Workers</span>
         </a>
       </li>
@@ -53,7 +53,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link {% if filename != 'myreports' %} collapsed {% endif %}" href="/performance">
-          <i class="bi bi-book"></i>
+          <i class="bi bi-trophy"></i>
           <span>Performance</span>
         </a>
       </li>
